# metaflow_slack_notifier

./: .gitignore  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml  publish.yaml
examples/: example_flow.py
metaflow_extensions/slack/plugins/: __init__.py  slack.py
src/metaflow_slack_notifier/: __init__.py
tests/metaflow_extensions/slack/plugins/: test_slack.py
