[project]
name = "metaflow-slack-notifier"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kohei Tsuyuki", email = "kotsuyuki@gmail.com" }
]
dependencies = [
    "metaflow>=2.12",
    "requests>=2.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "pyflakes>=3.2.0",
    "pytest>=8.3.4",
    "types-requests>=2.32.0.20241016",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "metaflow_extensions/**/*.py",
    "metaflow_extensions/*.py",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["F"]
line-length = 120
target-version = "py310"
